EKS/ALB/simple-app-service-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-app
  name: simple-app-service
spec:
  ports:
  - port: 80    # External port
    protocol: TCP
    targetPort: 8080  # Port on pod
  selector:
    app: simple-app
  type: ClusterIP
