EKS/ALB/simple-app-service-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: simple-app
  name: simple-app-service
spec:
  ports:
  - port: 80    # External port
    protocol: TCP
    targetPort: 8080  # Port on pod
    nodePort: 30007
  selector:
    app: simple-app
  type: NodePort
